--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -1586,13 +1586,7 @@
     "heroku local\n",
     "```\n",
     "\n",
-    "13. (Optional) Deactivate the virtual environment:\n",
-    "\n",
-    "```\n",
-    "deactivate\n",
-    "```\n",
-    "\n",
-    "14. add, commit push:\n",
+    "13. add, commit push:\n",
     "\n",
     "```\n",
     "git add .\n",
@@ -1600,14 +1594,239 @@
     "git push heroku master\n",
     "```\n",
     "\n",
-    "15. Click on the url and make sure it works!\n",
+    "14. Hit the url and make sure it works!\n",
     "\n",
-    "16. (If something is wrong):\n",
+    "- http://\\<url\\>/predict?temperature=20\n",
+    "\n",
+    "15. Make sure nothing is wrong (check the logs!):\n",
     "\n",
     "```\n",
     "heroku logs -t \n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# App 07"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FastAPI is the new kid on the block. It's faster, less boilerplate, and the future. Converting from Flask to FastAPI isn't that tough:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "import uvicorn\n",
+    "from fastapi import FastAPI\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "with open('pipe.pkl', 'rb') as f:\n",
+    "    pipe = pickle.load(f)\n",
+    "\n",
+    "@app.get('/')\n",
+    "def index():\n",
+    "    return 'Use the /predict endpoint with a temperature argument'\n",
+    "\n",
+    "@app.get('/predict')\n",
+    "def predict(temperature: float):\n",
+    "    new = pd.DataFrame({'temperature': [temperature]})\n",
+    "    prediction = pipe.predict(new)[0]\n",
+    "    return {'prediction': prediction}\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run at the command line with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mINFO\u001b[0m:     Uvicorn running on \u001b[1mhttp://127.0.0.1:5000\u001b[0m (Press CTRL+C to quit)\n",
+      "\u001b[32mINFO\u001b[0m:     Started reloader process [\u001b[36m\u001b[1m5353\u001b[0m] using \u001b[36m\u001b[1mstatreload\u001b[0m\n",
+      "\u001b[32mINFO\u001b[0m:     Started server process [\u001b[36m5355\u001b[0m]\n",
+      "\u001b[32mINFO\u001b[0m:     Waiting for application startup.\n",
+      "\u001b[32mINFO\u001b[0m:     Application startup complete.\n",
+      "\u001b[32mINFO\u001b[0m:     127.0.0.1:54477 - \"\u001b[1mGET /predict?temperature=20 HTTP/1.1\u001b[0m\" \u001b[32m200 OK\u001b[0m\n",
+      "\u001b[32mINFO\u001b[0m:     127.0.0.1:54477 - \"\u001b[1mGET /predict?temperature=20 HTTP/1.1\u001b[0m\" \u001b[32m200 OK\u001b[0m\n",
+      "\u001b[32mINFO\u001b[0m:     127.0.0.1:54478 - \"\u001b[1mGET /docs HTTP/1.1\u001b[0m\" \u001b[32m200 OK\u001b[0m\n",
+      "\u001b[32mINFO\u001b[0m:     127.0.0.1:54478 - \"\u001b[1mGET /openapi.json HTTP/1.1\u001b[0m\" \u001b[32m200 OK\u001b[0m\n",
+      "^C\n",
+      "\u001b[32mINFO\u001b[0m:     Shutting down\n",
+      "\u001b[32mINFO\u001b[0m:     Finished server process [\u001b[36m5355\u001b[0m]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!uvicorn app:app --port 5000 --reload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try it out and make sure it still works:\n",
+    "\n",
+    "- http://127.0.0.1:5000/predict?temperature=20\n",
+    "\n",
+    "As a bonus there's also some wicked auto-generate docs at:\n",
+    "\n",
+    "- http://127.0.0.1:5000/docs\n",
+    "\n",
+    "Interrupt and kill when you've verified it works"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploy 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heroku + fastAPI\n",
+    "\n",
+    "0. If you're not in your environment anymore you can re-enter with:\n",
+    "\n",
+    "`source .venv/bin/activate`\n",
+    "\n",
+    "(And to exit out to your base environment):\n",
+    "\n",
+    "`deactivate`\n",
+    "\n",
+    "1. Install the new dependencies:\n",
+    "\n",
+    "```\n",
+    "pip install uvicorn fastapi\n",
+    "```\n",
+    "\n",
+    "2. Freeze the dependencies:\n",
+    "\n",
+    "```\n",
+    "pip freeze > requirements.txt\n",
+    "```\n",
+    "\n",
+    "3. Retrain the model inside of the virtual environment:\n",
+    "\n",
+    "```\n",
+    "python model.py\n",
+    "```\n",
+    "\n",
+    "4. Make sure the app still works locally:\n",
+    "\n",
+    "```\n",
+    "uvicorn app:app --port=5000\n",
+    "```\n",
+    "\n",
+    "5. Create a new `Procfile`:\n",
+    "\n",
+    "```\n",
+    "echo \"web: uvicorn app:app --host=0.0.0.0 --port=${PORT:-5000}\" > Procfile\n",
+    "```\n",
+    "\n",
+    "6. Test the app locally:\n",
+    "\n",
+    "```\n",
+    "heroku local\n",
+    "```\n",
+    "\n",
+    "7. add, commit push:\n",
+    "\n",
+    "```\n",
+    "git add .\n",
+    "git commit -m '🚀'\n",
+    "git push heroku master\n",
+    "```\n",
+    "\n",
+    "8. Click on the url and make sure it works!\n",
+    "\n",
+    "- http://\\<url\\>/predict?temperature=20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're not in your environment anymore you can re-enter with:\n",
+    "\n",
+    "`source .venv/bin/activate`\n",
+    "\n",
+    "And to exit out to your base environment:\n",
+    "\n",
+    "`deactivate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
