--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2851,12 +2851,7 @@
     "    request.add_header(\"Content-type\", \"application/json; charset=UTF-8\")\n",
     "    with urlopen(request) as response:\n",
     "        data = json.loads(response.read().decode(\"utf-8\"))\n",
-    "    return data\n",
-    "\n",
-    "data = {\n",
-    "    \"date\": str(pd.Timestamp('now')),\n",
-    "    \"temperature\": 20\n",
-    "}"
+    "    return data"
    ]
   },
   {
@@ -2890,6 +2885,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"date\": str(pd.Timestamp('now')),\n",
+    "    \"temperature\": 20\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
    "outputs": [
@@ -2919,19 +2926,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**On Laptop**\n",
+    "1. Create a [DigitalOcean](https://m.do.co/c/2909cd1f3f10) Account.\n",
     "\n",
-    "1. Push everything up to GitHub:\n",
+    "2. Spin up a $5 a Dokku Image from the Market Place\n",
     "\n",
-    "```\n",
-    "git add .\n",
-    "git commit -m '🚀'\n",
-    "git push\n",
-    "```\n",
-    "\n",
-    "**On Server**\n",
-    "\n",
-    "2. Spin up a $5 Ubuntu 18.04 server ([DigitalOcean](https://m.do.co/c/2909cd1f3f10) works)...\n",
+    "- It'll take some time to provision (~3-5 minutes, be patient)\n",
     "\n",
     "3. ssh into it:\n",
     "\n",
@@ -2939,51 +2938,17 @@
     "ssh root@165.XXX.43.118\n",
     "```\n",
     "\n",
-    "4. Update everything:\n",
+    "4. Visit the Droplet’s IP address in a browser to finish configuring Dokku.\n",
+    "\n",
+    "5. Copy and paste your ssh key from your **laptop** into the config window:\n",
     "\n",
     "```\n",
-    "sudo apt update\n",
-    "sudo apt -y upgrade\n",
-    "```\n",
-    "\n",
-    "5. Setup firewall:\n",
-    "\n",
-    "````\n",
-    "ufw app list\n",
-    "ufw allow OpenSSH\n",
-    "ufw enable\n",
-    "````\n",
-    "\n",
-    "6. Add some rules ([source](https://www.digitalocean.com/community/tutorials/how-to-set-up-a-firewall-with-ufw-on-ubuntu-18-04)):\n",
-    "\n",
-    "```\n",
-    "sudo ufw default deny incoming\n",
-    "sudo ufw default allow outgoing\n",
-    "sudo ufw allow ssh\n",
-    "sudo ufw allow 22\n",
-    "sudo ufw allow http\n",
-    "sudo ufw allow https\n",
-    "```\n",
-    "\n",
-    "7. Install dokku:\n",
-    "\n",
-    "```\n",
-    "wget https://raw.githubusercontent.com/dokku/dokku/v0.21.4/bootstrap.sh\n",
-    "sudo DOKKU_TAG=v0.21.4 bash bootstrap.sh\n",
-    "```\n",
-    "\n",
-    "8. Navigate to the machine IP address of the server in a browser and add your ssh key\n",
-    "\n",
-    "```\n",
-    "# to copy and paste:\n",
     "cat .ssh/id_rsa.pub\n",
     "```\n",
     "\n",
-    "9. Add server IPv4 address to the hostname for now:\n",
+    "6. Click \"Finish Setup\"...\n",
     "\n",
-    "> 165.XXX.43.118\n",
-    "\n",
-    "10. Create a dokku app:\n",
+    "7. Go back to the server terminal and create a dokku app on the server:\n",
     "\n",
     "```\n",
     "dokku apps:create powerapp\n",
