--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2954,7 +2954,7 @@
     "dokku apps:create powerapp\n",
     "```\n",
     "\n",
-    "11. Enable VHOST:\n",
+    "8. Enable VHOST:\n",
     "\n",
     "```\n",
     "dokku domains:enable powerapp\n",
@@ -2962,19 +2962,19 @@
     "\n",
     "**On Laptop**\n",
     "\n",
-    "12. Add dokku as a remote:\n",
+    "9. Add dokku as a remote:\n",
     "\n",
     "```\n",
     "git remote add dokku dokku@165.XXX.43.118:powerapp\n",
     "```\n",
     "\n",
-    "13. Verify that the remote got added:\n",
+    "10. Verify that the remote got added:\n",
     "\n",
     "```\n",
     "git remote -v\n",
     "```\n",
     "\n",
-    "14. Push it up (for every new change just run these commands):\n",
+    "11. Push it up (for every new change just run these commands):\n",
     "\n",
     "```\n",
     "git add .\n",
@@ -2982,9 +2982,7 @@
     "git push dokku master\n",
     "```\n",
     "\n",
-    "15. Hit the server address (`165.XXX.43.118`) to make sure it works!\n",
-    "\n",
-    "16. And test it with the post function:"
+    "12. Test if it works with the post function:"
    ]
   },
   {
