--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2867,6 +2867,10 @@
    "source": [
     "Deploy on Dokku (Heroku Open Source, and better)\n",
     "\n",
+    "Create a new Procfile:\n",
+    "\n",
+    "`web: uvicorn app:app --host=0.0.0.0 --port=${PORT:-5000}`\n",
+    "\n",
     "\n",
     "Rerun the model:\n",
     "\n",
@@ -2952,12 +2956,6 @@
     "\n",
     "```\n",
     "dokku apps:create powerapp\n",
-    "```\n",
-    "\n",
-    "8. Enable VHOST:\n",
-    "\n",
-    "```\n",
-    "dokku domains:enable powerapp\n",
     "```\n",
     "\n",
     "**On Laptop**\n",
