--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2867,9 +2867,9 @@
    "source": [
     "Deploy on Dokku (Heroku Open Source, and better)\n",
     "\n",
-    "Create a new Procfile:\n",
+    "Create a new Procfile (it should respect port 5000):\n",
     "\n",
-    "`web: uvicorn app:app --host=0.0.0.0 --port=${PORT:-5000}`\n",
+    "`echo \"web: uvicorn app:app --host=0.0.0.0 --port=${PORT:-5000}\" > Procfile`\n",
     "\n",
     "\n",
     "Rerun the model:\n",
@@ -2930,11 +2930,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a [DigitalOcean](https://m.do.co/c/2909cd1f3f10) Account.\n",
+    "Deploy Dokku by:\n",
     "\n",
-    "2. Spin up a $5 a Dokku Image from the Market Place\n",
+    "1. Sign up for a [DigitalOcean](https://m.do.co/c/2909cd1f3f10) account\n",
     "\n",
-    "- It'll take some time to provision (~3-5 minutes, be patient)\n",
+    "2. Spin up a $5 Ubuntu 20/18.04 server...\n",
     "\n",
     "3. ssh into it:\n",
     "\n",
@@ -2942,17 +2942,53 @@
     "ssh root@165.XXX.43.118\n",
     "```\n",
     "\n",
-    "4. Visit the Droplet’s IP address in a browser to finish configuring Dokku.\n",
+    "4. (Strongly advised) Update everything:\n",
     "\n",
-    "5. Copy and paste your ssh key from your **laptop** into the config window:\n",
+    "```\n",
+    "sudo apt update\n",
+    "sudo apt -y upgrade\n",
+    "```\n",
+    "\n",
+    "5. Setup firewall:\n",
+    "\n",
+    "````\n",
+    "ufw app list\n",
+    "ufw allow OpenSSH\n",
+    "ufw enable\n",
+    "````\n",
+    "\n",
+    "6. Add some rules ([source](https://www.digitalocean.com/community/tutorials/how-to-set-up-a-firewall-with-ufw-on-ubuntu-18-04)):\n",
+    "\n",
+    "```\n",
+    "sudo ufw default deny incoming\n",
+    "sudo ufw default allow outgoing\n",
+    "sudo ufw allow ssh\n",
+    "sudo ufw allow 22\n",
+    "sudo ufw allow http\n",
+    "sudo ufw allow https\n",
+    "```\n",
+    "\n",
+    "7. Install dokku:\n",
+    "\n",
+    "```\n",
+    "wget https://raw.githubusercontent.com/dokku/dokku/v0.21.4/bootstrap.sh\n",
+    "sudo DOKKU_TAG=v0.21.4 bash bootstrap.sh\n",
+    "```\n",
+    "\n",
+    "8. Visit the Droplet’s IP address in a browser to finish configuring Dokku\n",
+    "\n",
+    "- THIS STEP IS IMPORTANT!\n",
+    "\n",
+    "9. Copy and paste your ssh key from your **laptop** into the config window:\n",
     "\n",
     "```\n",
     "cat .ssh/id_rsa.pub\n",
     "```\n",
     "\n",
-    "6. Click \"Finish Setup\"...\n",
+    "10. Click \"Finish Setup\"...\n",
     "\n",
-    "7. Go back to the server terminal and create a dokku app on the server:\n",
+    "\n",
+    "11. Go back to the server terminal and create a dokku app on the server:\n",
     "\n",
     "```\n",
     "dokku apps:create powerapp\n",
@@ -2960,19 +2996,19 @@
     "\n",
     "**On Laptop**\n",
     "\n",
-    "9. Add dokku as a remote:\n",
+    "12. Add dokku as a remote:\n",
     "\n",
     "```\n",
     "git remote add dokku dokku@165.XXX.43.118:powerapp\n",
     "```\n",
     "\n",
-    "10. Verify that the remote got added:\n",
+    "13. Verify that the remote got added:\n",
     "\n",
     "```\n",
     "git remote -v\n",
     "```\n",
     "\n",
-    "11. Push it up (for every new change just run these commands):\n",
+    "14. Push it up (for every new change just run these commands):\n",
     "\n",
     "```\n",
     "git add .\n",
@@ -2980,7 +3016,7 @@
     "git push dokku master\n",
     "```\n",
     "\n",
-    "12. Test if it works with the post function:"
+    "15. Test if it works with the post function:"
    ]
   },
   {
