--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2975,9 +2975,10 @@
     "sudo DOKKU_TAG=v0.21.4 bash bootstrap.sh\n",
     "```\n",
     "\n",
+    "**THIS STEP IS IMPORTANT!**\n",
+    "\n",
     "8. Visit the Droplet’s IP address in a browser to finish configuring Dokku\n",
     "\n",
-    "- **THIS STEP IS IMPORTANT!**\n",
     "\n",
     "9. Copy and paste your ssh key from your **laptop** into the config window:\n",
     "\n",
@@ -2985,98 +2986,20 @@
     "cat .ssh/id_rsa.pub\n",
     "```\n",
     "\n",
-    "And add the IP of the server to the hostname:\n",
+    "10. And add the IP of the server to the hostname:\n",
     "\n",
     "`68.183.XXX.31`\n",
     "\n",
-    "And enable VHOSTS!\n",
     "\n",
-    "10. Click \"Finish Setup\"...\n",
-    "\n",
-    "\n",
-    "11. Go back to the server terminal and create a dokku app on the server:\n",
-    "\n",
-    "```\n",
-    "dokku apps:create powerapp\n",
-    "```\n",
-    "\n",
-    "**On Laptop**\n",
-    "\n",
-    "12. Add dokku as a remote:\n",
-    "\n",
-    "```\n",
-    "git remote add dokku dokku@165.XXX.43.118:powerapp\n",
-    "```\n",
-    "\n",
-    "13. Verify that the remote got added:\n",
-    "\n",
-    "```\n",
-    "git remote -v\n",
-    "```\n",
-    "\n",
-    "14. Push it up (for every new change just run these commands):\n",
-    "\n",
-    "```\n",
-    "git add .\n",
-    "git commit -m '🤞'\n",
-    "git push dokku master\n",
-    "```\n",
-    "\n",
-    "15. Test if it works with the post function:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SLIM DEPLOY"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Deploy Dokku by:\n",
-    "\n",
-    "1. Sign up for a [DigitalOcean](https://m.do.co/c/2909cd1f3f10) account\n",
-    "\n",
-    "2. Search for Dokku in the Marketplace and spin up a $5 server\n",
-    "\n",
-    "- Be patient, it'll take awhile (3-5 minutes)\n",
-    "\n",
-    "3. ssh into it:\n",
-    "\n",
-    "```\n",
-    "ssh root@165.XXX.43.118\n",
-    "```\n",
-    "\n",
-    "8. Visit the Droplet’s IP address in a browser to finish configuring Dokku\n",
-    "\n",
-    "- **THIS STEP IS IMPORTANT!**\n",
-    "\n",
-    "9. Copy and paste your ssh key from your **laptop** into the config window:\n",
-    "\n",
-    "```\n",
-    "cat .ssh/id_rsa.pub\n",
-    "```\n",
-    "\n",
-    "And add the IP of the server to the hostname:\n",
-    "\n",
-    "`68.183.XXX.31`\n",
-    "\n",
-    "10. Click \"Finish Setup\"...\n",
+    "11. Click \"Finish Setup\"...\n",
     "\n",
     "\n",
-    "11. Go back to the server terminal and create a dokku app on the server:\n",
+    "12. Go back to the server terminal and create a dokku app on the server:\n",
     "\n",
     "```\n",
     "dokku apps:create powerapp\n",
-    "```\n",
-    "\n",
-    "12. Enable VHOST:\n",
-    "\n",
-    "```\n",
     "dokku domains:enable powerapp\n",
+    "\n",
     "```\n",
     "\n",
     "**On Laptop**\n",
@@ -3121,10 +3044,7 @@
     }
    ],
    "source": [
-    "post(\"http://68.183.204.31\", data)\n",
-    "\n",
-    "# I did this, but I don't think I need to if I don't mess up\n",
-    "# dokku domains:enable powerapp"
+    "post(\"http://68.183.204.31\", data)"
    ]
   },
   {
