get rid of intermediate files

--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -2901,16 +2901,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'prediction': 6673.45578647774}"
+       "{'prediction': 7304.033203125}"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3773,11 +3773,38 @@
     "git push dokku\n",
     "```\n",
     "\n",
-    "6. Check logs (to make sure it all works)\n",
+    "6. Check logs on server (to make sure it all works)\n",
     "\n",
     "```\n",
     "dokku logs powerapp --tail\n",
-    "```"
+    "```\n",
+    "\n",
+    "7. Test with the post function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prediction': 5974.84814453125}"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"date\": str(pd.Timestamp('now')),\n",
+    "    \"temperature\": 20\n",
+    "}\n",
+    "\n",
+    "post(\"http://142.93.148.110\", data)"
    ]
   },
   {
