--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -1565,14 +1565,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FastAPI is the new kid on the block. It's faster, less boilerplate, and the future. Converting from Flask to FastAPI isn't that tough:"
+    "Well! We have an app deployed. And it's working... but now it's time to level-up. Starting with the actual app. \n",
+    "\n",
+    "Flask is old news....\n",
+    "\n",
+    "FastAPI is the new kid on the block. It's faster, less boilerplate, and the future. And converting from Flask to FastAPI isn't that tough:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile app.py\n",
     "\n",
@@ -1605,16 +1617,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run at the command line with:"
+    "The main differences, `route`s are now `get`s and we can specify types in the endpoint functions!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!uvicorn app:app --port 5000 --reload"
+    "To run this fastAPI at the command line use:\n",
+    "\n",
+    "```\n",
+    "uvicorn app:app --port 5000 --reload\n",
+    "```\n",
+    "\n",
+    "> Tip: The first app in `app:app` is the file name, and the second app is the name of the app inside the file. These can be whatever!"
    ]
   },
   {
@@ -1629,7 +1645,7 @@
     "\n",
     "- http://127.0.0.1:5000/docs\n",
     "\n",
-    "Interrupt and kill when you've verified it works"
+    "Kill the app once you've verified it works to move on..."
    ]
   },
   {
@@ -1643,15 +1659,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Heroku + fastAPI\n",
+    "To deploy fastAPI to Heroku isn't much more work because we already have an environment setup.\n",
     "\n",
     "0. If you're not in your environment anymore you can re-enter with:\n",
     "\n",
-    "`source .venv/bin/activate`\n",
+    "```\n",
+    "source .venv/bin/activate\n",
     "\n",
-    "(And to exit out to your base environment):\n",
-    "\n",
-    "`deactivate`\n",
+    "# don't do it now, but to exit the environment you can call:\n",
+    "deactivate\n",
+    "```\n",
     "\n",
     "1. Install the new dependencies:\n",
     "\n",
@@ -1665,7 +1682,7 @@
     "pip freeze > requirements.txt\n",
     "```\n",
     "\n",
-    "3. Retrain the model inside of the virtual environment:\n",
+    "3. Retrain the model inside the virtual environment:\n",
     "\n",
     "```\n",
     "python model.py\n",
