--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -1697,7 +1697,7 @@
     "5. Create a new `Procfile`:\n",
     "\n",
     "```\n",
-    "echo \"web: uvicorn app:app --port 5000\" > Procfile\n",
+    "echo \"web: uvicorn app:app --host=0.0.0.0 --port=${PORT:-5000}\" > Procfile\n",
     "```\n",
     "\n",
     "6. Test the app locally:\n",
