--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -3629,16 +3629,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prediction': 6047.84423828125}"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {\n",
     "    \"date\": str(pd.Timestamp('now')),\n",
     "    \"temperature\": 20\n",
     "}\n",
     "\n",
-    "post(\"http://142.93.148.110\", data)"
+    "post(\"http://142.93.153.207\", data)"
    ]
   },
   {
@@ -3647,7 +3658,7 @@
    "source": [
     "And that's it!\n",
     "\n",
-    "New changes that don't have any new depends will just need:\n",
+    "New changes that don't have any new dependencies will just need:\n",
     "\n",
     "```\n",
     "git add .\n",
