--- a/step_by_step.ipynb
+++ b/step_by_step.ipynb
@@ -1499,6 +1499,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# App 06\n",
+    "\n",
+    "Just a quick change to our app... we need to reference `pipe` and not `model` anymore:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "\n",
+    "import pickle\n",
+    "from flask import Flask, request\n",
+    "import pandas as pd\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "with open(\"pipe.pkl\", 'rb') as f:\n",
+    "    pipe = pickle.load(f)\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def index():\n",
+    "    return 'Use the /predict endpoint'\n",
+    "\n",
+    "@app.route(\"/predict\")\n",
+    "def predict():\n",
+    "    query = request.args\n",
+    "    temperature = float(query.get('temperature'))\n",
+    "    new = pd.DataFrame({'temperature': [temperature]})\n",
+    "    prediction = pipe.predict(new)[0]\n",
+    "    return {'prediction': prediction}\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run(port=5000, debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Deploy 01 (Heroku)"
    ]
   },
